Details, dashboard animation added and spacing fixed

--- a/public/css/hacks/hacks.scss
+++ b/public/css/hacks/hacks.scss
@@ -116,20 +116,21 @@ body {
     min-height: 100vh;
     height: 100vh;
     background-image: linear-gradient(to bottom, rgba($black, .1), rgba($black, 1)),
-                      url('./../../images/hacks/dash-board.svg');
+                      url('./../../images/hacks/dash-board.png');
     background-repeat: no-repeat;
+    background-position: center;
     background-size: cover;
                      
     .img-c {
-      height: 78vh;
-      width: 50vw;
+      height: 65vh;
+      width: 30vw;
 
       position: absolute;
-      top: 55%;
+      top: 45%;
       left: 50%;
 
       transition: all 1s;
-      animation: rotationZ 3s infinite;
+      animation: rotationZ 3s linear infinite;
       img {
         height: 100%;
         width: 100%;
@@ -1598,6 +1599,8 @@ body {
     .navigation {
         display: none;
     }
+
+
 
 .footer {
     min-height: 40vh;
